Ant: Remove manually including module java.xml.bind
This fails now after the update to JDK 17
and is not necessary any more anyway.